# pelorus

./: .gitignore  API.md  README.md  pyproject.toml
src/: agent.py  app.py  atspi.py  desktop_tools.py  kwin_dbus.py  rest.py  state.py  utils.py  ws.py
src/providers/: __init__.py  base.py  gemini.py  ollama.py  openai_compat.py
src/static/: app.js  index.html  style.css
src/tools/: __init__.py  base.py
